--- a/Lesson_4作业.ipynb
+++ b/Lesson_4作业.ipynb
@@ -232,7 +232,7 @@
     "#model.save('word2vecModel_article_9k.model')\n",
     "#model.wv.save_word2vec_format('word2vecModel_article_9k.vector',binary=False)\n",
     "model.wv.vocab['人工智能']\n",
-    "print(model.wv.similarity('人工智能','美丽')) #两个词的相关性\n"
+    "print(model.wv.similarity('人工智能','机器人')) #两个词的相关性\n"
    ]
   },
   {
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "model.wv['人工智能'][:10] #查看词向量 前10个"
+    "model.wv.most_similar('人工智能')"
    ]
   },
   {
